chore: link payloads with core, ft. SDKDIR shenanigans (#34)
* link payloads with core

* removed -fno-builtin from payload.mk

--- a/core/Makefile
+++ b/core/Makefile
@@ -2,7 +2,7 @@
 .SUFFIXES:
 #---------------------------------------------------------------------------------
 ifeq ($(SDKDIR),)
-SDKDIR = ../sdk
+export SDKDIR = $(CURDIR)/../sdk
 endif
 
 include $(SDKDIR)/starstruck_rules
@@ -34,7 +34,7 @@ ASFLAGS += $(CFLAGS)
 #---------------------------------------------------------------------------------
 # any extra libraries we wish to link with the project
 #---------------------------------------------------------------------------------
-LIBS	:= -lgcc
+LIBS	:=
 
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
@@ -89,7 +89,7 @@ export LIBPATHS	:=	$(foreach dir,$(LIBDIRS),-L$(dir)/lib)
 $(BUILD): ./include/git_version.h
 	@[ -d $@ ] || mkdir -p $@
 	$(SILENTCMD) mkdir -p $(OUTPUTDIR)
-	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile SDKDIR=../$(SDKDIR)
+	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
 
 ./include/git_version.h: describesimple.sh
 	$(SILENTCMD)echo "  GITVER    $@"
@@ -108,10 +108,6 @@ else
 # main targets
 #---------------------------------------------------------------------------------
 $(OUTPUT).a	: $(OFILES)
-
-#we don't want gcc to rewrite our code in string.c. it would cause GCC to replace some parts of memset with a call to memset
-#that... isn't correct for obvious reasons :)
-string.o: 		CFLAGS += -fno-builtin
 
 #---------------------------------------------------------------------------------
 # The bin2o rule should be copied and modified
