fixes: don't show library & its includes in vscode

--- a/sdk/.vscode/settings.json
+++ b/sdk/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	//because i can't exclude the tools folder in the root without also excluding kernel/tools...
 	"files.exclude": {
-		"tools/**": true,
+		"include/**": true,
+		"lib/**": true,
 	}
 }
